Fix: background img collapse with text on top

--- a/apps/loan/outside-register-success-app/less/index.less
+++ b/apps/loan/outside-register-success-app/less/index.less
@@ -9,7 +9,8 @@ h3, p {
 }
 
 html {
-  height: 100%;
+  height: 100%; // for image background-position
+  min-height: 1140px; // give background img more space not to collapse with text
 }
 
 body {
