--- a/apps/loan/outside-register-success-otherApps/less/index.less
+++ b/apps/loan/outside-register-success-otherApps/less/index.less
@@ -10,6 +10,7 @@ h1, h2, h3, p {
 
 html {
   height: 100%;
+  min-height: 1140px;
 }
 
 body {
