--- a/apps/loan/outside-register/less/index.less
+++ b/apps/loan/outside-register/less/index.less
@@ -41,12 +41,13 @@
   box-sizing: border-box;
 }
 
-// html {
-//   height: 100%;
-// }
+html {
+  height: 100%;
+  min-height: 1000px;
+}
 
 body {
-  // height: 100%;
+  height: 100%;
   background: #4a86e8 url("../images/bg.png") no-repeat;
   background-position: 0 -111px;
 }
